tests/init_state/ref_obligations/drop_deref_of_mut_ref_leaks_pointee.err.expected
error: at 6:5: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
   |
 6 |     return
   |     ^^^^^^
  = note: reference declared here
   |
 3 | fn f(r: &mut i64) {
   |      ^^^^^^^^^^^
